fix horizontal scroll

--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -30,7 +30,7 @@
     .greetingText {
       width: 350px;
       color: $descriptionColor;
-      @include text($fontDescription, 30px, 1.2, 400);
+      @include text($fontDescription, 29px, 1.2, 400);
     }
 
     .myName {
@@ -69,7 +69,7 @@
       }
 
       .photo {
-        width: 350px;
+        width: 320px;
         height: 400px;
         background-size: cover;
         background-position: center;
